--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     
-    working_directory: ~/mgmresorts-reactive
+    working_directory: ~/testpublicrepo/mgmresorts-reactive
 
     docker:
       - image: circleci/openjdk:8-jdk-browsers
