--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ jobs:
           path: target/surefire-reports
       
       - store_artifacts:
-          path: target/mgmresorts-reactive-1.0.jar
+          path: target/testpublicrepo-1.0.jar
