--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mgmresorts.reactive.boot</groupId>
-  <artifactId>mgmresorts-reactive</artifactId>
+  <artifactId>testpublicrepo</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
   
@@ -46,6 +46,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+	
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <useSystemClassLoader>false</useSystemClassLoader>
+            </configuration>
+        </plugin>
+    </plugins>
 	</build>
 </project>
