--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
 
     docker:
       - image: circleci/openjdk:8-jdk-browsers
-  
+       
     steps:
 
       - checkout
@@ -28,3 +28,48 @@ jobs:
       
       - store_artifacts:
           path: target/testpublicrepo-1.0.jar
+
+      - run:
+          name: Save jar to an workspace folder
+          command: |
+            mkdir spring-jar
+            cp -R target/testpublicrepo-1.0.jar spring-jar
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - spring-jar
+
+  deploy:  
+    docker:
+      - image: circleci/python:3.6.1
+    environment:
+      AWS_DEFAULT_OUTPUT: json
+    steps:
+      - checkout
+      - setup_remote_docker
+      - attach_workspace:
+          at: workspace
+      - restore_cache:
+          key: v1-{{ checksum "requirements.txt" }}
+      - run:
+          name: Install awscli
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: v1-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: maste
