--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,22 +46,13 @@ jobs:
     environment:
       AWS_DEFAULT_OUTPUT: json
     steps:
-      - checkout
-      - setup_remote_docker
-      - attach_workspace:
-          at: workspace
-      - restore_cache:
-          key: v1-{{ checksum "requirements.txt" }}
-      - run:
+     - run:
           name: Install awscli
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          key: v1-{{ checksum "requirements.txt" }}
-          paths:
-            - "venv"
+          command: pip install awsebcli --upgrade --user
+      - run:
+          name: check eb version
+          command: eb --version
+
 workflows:
   version: 2
   build-deploy:
@@ -70,6 +61,3 @@ workflows:
       - deploy:
           requires:
             - build
-          filters:
-            branches:
-              only: maste
