--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,24 +40,20 @@ jobs:
           paths:
             - spring-jar
 
-  deploy:  
-    docker:
-      - image: circleci/python:3.6.1
-    environment:
-      AWS_DEFAULT_OUTPUT: json
-    steps:
       - run:
-          name: Install awscli
-          command: pip install awsebcli --upgrade --user
+          name: Installing deployment dependencies
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install python-pip python-dev build-essential
+            sudo pip install awsebcli --upgrade
+
       - run:
-          name: check eb version
-          command: eb --version
+          name: Deploying
+          command: eb deploy MgmresortsReactive-dev     
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build
