--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
 
       - run:
           name: Installing deployment dependencies
-          working_directory: /
+          working_directory: ~/project/target
           command: |
             sudo apt-get -y -qq update
             sudo apt-get install python-pip python-dev build-essential
