--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,16 +53,16 @@ jobs:
             sudo apt-get install python-pip python-dev build-essential
             sudo pip install awsebcli --upgrade
 
-      - run:
-          name: Setting EB environment name
-          command: eb use MgmresortsReactive-dev   
+#      - run:
+#          name: Setting EB environment name
+#          command: eb use MgmresortsReactive-dev   
 
-      - run:
-          name: Setting EB environment variables
-          command: eb setenv SERVER_PORT=5000   
-      - run:
-          name: Deploying
-          command: eb deploy    
+#      - run:
+#          name: Setting EB environment variables
+#          command: eb setenv SERVER_PORT=5000   
+#      - run:
+#          name: Deploying
+#          command: eb deploy    
 
 workflows:
   version: 2
