--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,15 @@ jobs:
 
       - run:
           name: Installing deployment dependencies
-          working_directory: ~/project/target
+          working_directory: ~/project
           command: |
             sudo apt-get -y -qq update
             sudo apt-get install python-pip python-dev build-essential
             sudo pip install awsebcli --upgrade
+
+      - run:
+          name: echo workspace
+          command: ls -ltr *      
 
 #      - run:
 #          name: Setting EB environment name
