--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,13 @@ jobs:
           command: ls -ltr spring-jar/*           
 
   integration-test:
+    docker:
+      - image: circleci/openjdk:8-jdk-browsers
     steps:
       - run: mvn dependency:go-offline
   deploy:
+    docker:
+      - image: circleci/openjdk:8-jdk-browsers
     steps:
       - run:
         name: Installing deployment dependencies
