--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
-      - run: mvn dependency:go-offline
+      - run: mvn test
   deploy:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
