--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,32 @@ jobs:
       
       - run: mvn package -DskipTests
       
-            
+      - run:
+          name: Save jar to an workspace folder
+          command: |
+            mkdir spring-jar
+            cp -R target/testpublicrepo-1.0.jar spring-jar
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - spring-jar
+
+      - run:
+          name: echo workspace
+          command: ls -ltr spring-jar/*               
 
   integration-test:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
+      - attach_workspace::
+          at: /tmp/workspace
+
+      - run:
+          name: echo workspace
+          command: ls -ltr spring-jar/*               
+
       - checkout
 
       - restore_cache:
@@ -49,20 +69,7 @@ jobs:
       - store_artifacts:
           path: target/testpublicrepo-1.0.jar
 
-#      - run:
-#          name: Save jar to an workspace folder
-#          command: |
-#            mkdir spring-jar
-#            cp -R target/testpublicrepo-1.0.jar spring-jar
-
-#      - persist_to_workspace:
-#          root: .
-#          paths:
-#            - spring-jar
-
-#      - run:
-#          name: echo workspace
-#          command: ls -ltr spring-jar/*    
+ 
 
        
   deploy:
