--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,28 +43,9 @@ jobs:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
       - when:
-        condition: $IT_TESTS
-        steps:
-            - attach_workspace:
-                at: /tmp/workspace
-
-            - run:
-                name: echo workspace
-                command: ls -ltr /tmp/workspace/spring-jar/*               
-
-            - checkout
-
-            - restore_cache:
-                key: circleci-mgmresorts-reactive-{{ checksum "pom.xml" }}
-            
-            - run: mvn dependency:go-offline
-            
-            - save_cache:
-                paths:
-                    - ~/.m2
-                key: circleci-mgmresorts-reactive-{{ checksum "pom.xml" }}
-            
-            - run: mvn test
+          condition: <<parameters.IT_TEST_REQUIRED>>
+          steps:
+            - run: echo "my custom checkout"
 
             - store_test_results:
                 path: target/surefire-reports
@@ -119,6 +100,7 @@ workflows:
     jobs:
       - build
       - integration-test:
+          IT_TEST_REQUIRED: $IT_ENV
           requires:
             - build
         #   - hold-for-qa: 
