--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 jobs:
   build:
     
@@ -42,18 +42,16 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
+      - run: echo "preinstall is << parameters.preinstall-foo >>"
       - when:
-        condition: <<parameters.preinstall-foo>>
-        steps:
-          - run: echo "my custom checkout"
+          condition: << parameters.preinstall-foo >>
+          steps:
+            - run: echo "preinstall"
+      - unless:
+          condition: << parameters.preinstall-foo >>
+          steps:
+            - run: echo "don't preinstall"
 
-          - store_test_results:
-              path: target/surefire-reports
-            
-          - store_artifacts:
-              path: target/testpublicrepo-1.0.jar
-
- 
 
        
   deploy:
