--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,10 @@ jobs:
           command: ls -ltr spring-jar/*               
 
   integration-test:
+    parameters:
+      preinstall-foo:
+        type: boolean
+        default: false
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
