--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ workflows:
     jobs:
       - build
       - integration-test:
-          preinstall-foo: false
+          preinstall-foo: $IT_TESTS_EXEC
         #   requires:
         #     - build
         #   - hold-for-qa: 
